[gd_scene load_steps=40 format=2]

[ext_resource path="res://Objects/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Knight/slash_knight_assetsparallax/Enemy/Dark Knight.png" type="Texture" id=2]
[ext_resource path="res://sprites/Knight/spritesheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 194, 128, 62, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 132, 128, 62, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 70, 128, 62, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8, 128, 62, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 62, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 62, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 132, 0, 62, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 194, 0, 62, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 194, 64, 62, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 8, 64, 62, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 70, 64, 62, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 132, 64, 62, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "stun",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 10 )

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CombatArea2D/SwordStrikeCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:is_attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=27]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8, 9, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CombatArea2D/SwordStrikeCollider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:is_attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=30]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="Animation" id=31]
resource_name = "stunned"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=24]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "stunned"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=25]
states/attack/node = SubResource( 32 )
states/attack/position = Vector2( 613, 269 )
states/idle/node = SubResource( 33 )
states/idle/position = Vector2( 210, 145 )
states/stunned/node = SubResource( 34 )
states/stunned/position = Vector2( 344, 334 )
states/walk/node = SubResource( 29 )
states/walk/position = Vector2( 627, 145 )
transitions = [ "idle", "stunned", SubResource( 41 ), "stunned", "idle", SubResource( 43 ), "attack", "stunned", SubResource( 39 ), "idle", "walk", SubResource( 35 ), "walk", "idle", SubResource( 36 ), "walk", "stunned", SubResource( 40 ), "stunned", "walk", SubResource( 42 ), "walk", "attack", SubResource( 37 ), "attack", "walk", SubResource( 38 ) ]
start_node = "idle"
graph_offset = Vector2( 83, 113 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 4.5, 6.5 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -1, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 0.254902, 0.254902, 1 )
position = Vector2( 2, 5.96046e-08 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 8 )
animation = "stun"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.40466, 1.12373 )
scale = Vector2( 0.294, 0.312 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="DieTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerRayCheck" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 23 )
anims/attack = SubResource( 27 )
anims/idle = SubResource( 30 )
anims/stunned = SubResource( 31 )
anims/walk = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 26 )

[node name="CombatArea2D" type="Area2D" parent="."]

[node name="SwordStrikeCollider" type="CollisionShape2D" parent="CombatArea2D"]
position = Vector2( 4.5, -3.5 )
shape = SubResource( 28 )
disabled = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="body_entered" from="CombatArea2D" to="." method="_on_CombatArea2D_body_entered"]
